--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@ngx-formly/core": "^5.10.19",
     "d3": "^6.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
