--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/drag-drop-touch/DragDropTouch.js"
+            ]
           },
           "configurations": {
             "production": {
