--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "drag-drop-touch": "^1.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.8",
